src/OpenCvSharpExtern/bgsegm.h

CVAPI(ExceptionStatus) bgsegm_Ptr_BackgroundSubtractorGSOC_get(cv::Ptr<cv::bgsegm::BackgroundSubtractorGSOC> *obj, cv::bgsegm::BackgroundSubtractorGSOC **returnValue)
{
    return cvTry([&] {
        *returnValue = obj->get();
    });
}
CVAPI(ExceptionStatus) bgsegm_Ptr_BackgroundSubtractorGSOC_delete(cv::Ptr<cv::bgsegm::BackgroundSubtractorGSOC> *obj)
{
    return cvTry([&] {
        delete obj;
    });
}
CVAPI(ExceptionStatus) bgsegm_createBackgroundSubtractorLSBP(
    int mc, int nSamples, int lsbpRadius, float tLower, float tUpper, float tInc, float tDec,
    float rScale, float rIncdec, float noiseRemovalThresholdFacBG, float noiseRemovalThresholdFacFG,
    int lsbpThreshold, int minCount,
    cv::Ptr<cv::bgsegm::BackgroundSubtractorLSBP> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::bgsegm::createBackgroundSubtractorLSBP(
            mc, nSamples, lsbpRadius, tLower, tUpper, tInc, tDec,
            rScale, rIncdec, noiseRemovalThresholdFacBG, noiseRemovalThresholdFacFG,
            lsbpThreshold, minCount);
        *returnValue = new cv::Ptr<cv::bgsegm::BackgroundSubtractorLSBP>(ptr);
    });
}
CVAPI(ExceptionStatus) bgsegm_Ptr_BackgroundSubtractorLSBP_get(cv::Ptr<cv::bgsegm::BackgroundSubtractorLSBP> *obj, cv::bgsegm::BackgroundSubtractorLSBP **returnValue)
{
    return cvTry([&] {
        *returnValue = obj->get();
    });
}
CVAPI(ExceptionStatus) bgsegm_Ptr_BackgroundSubtractorLSBP_delete(cv::Ptr<cv::bgsegm::BackgroundSubtractorLSBP> *obj)
{
    return cvTry([&] {
        delete obj;
    });
}
CVAPI(ExceptionStatus) bgsegm_BackgroundSubtractorLSBPDesc_calcLocalSVDValues(
    const interop::OutputArrayProxy* localSVDValues, cv::Mat* frame)
{
    return cvTry([&] {
        cv::bgsegm::BackgroundSubtractorLSBPDesc::calcLocalSVDValues(OutProxy(*localSVDValues), *frame);
    });
}
CVAPI(ExceptionStatus) bgsegm_BackgroundSubtractorLSBPDesc_computeFromLocalSVDValues(
    const interop::OutputArrayProxy* desc, cv::Mat* localSVDValues, cv::Point2i* lsbpSamplePoints)
{
    return cvTry([&] {
        cv::bgsegm::BackgroundSubtractorLSBPDesc::computeFromLocalSVDValues(OutProxy(*desc), *localSVDValues, lsbpSamplePoints);
    });
}
CVAPI(ExceptionStatus) bgsegm_BackgroundSubtractorLSBPDesc_compute(
    const interop::OutputArrayProxy* desc, cv::Mat* frame, cv::Point2i* lsbpSamplePoints)
{
    return cvTry([&] {
        cv::bgsegm::BackgroundSubtractorLSBPDesc::compute(OutProxy(*desc), *frame, lsbpSamplePoints);
    });
}
CVAPI(ExceptionStatus) bgsegm_SyntheticSequenceGenerator_new(
    const interop::InputArrayProxy* background,
    const interop::InputArrayProxy* object,
    double amplitude, double wavelength, double wavespeed, double objspeed,
    cv::bgsegm::SyntheticSequenceGenerator** returnValue)
{
    return cvTry([&] {
        *returnValue = new cv::bgsegm::SyntheticSequenceGenerator(
            InProxy(*background), InProxy(*object), amplitude, wavelength, wavespeed, objspeed);
    });
}
CVAPI(ExceptionStatus) bgsegm_SyntheticSequenceGenerator_delete(cv::bgsegm::SyntheticSequenceGenerator* obj)
{
    return cvTry([&] {
        delete obj;
    });
}
CVAPI(ExceptionStatus) bgsegm_SyntheticSequenceGenerator_getNextFrame(
    cv::bgsegm::SyntheticSequenceGenerator* obj,
    const interop::OutputArrayProxy* frame,
    const interop::OutputArrayProxy* gtMask)
{
    return cvTry([&] {
        obj->getNextFrame(OutProxy(*frame), OutProxy(*gtMask));
    });
}