src/OpenCvSharp/Internal/PInvoke/NativeMethods/NativeMethods_bgsegm.cs


    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus bgsegm_Ptr_BackgroundSubtractorGSOC_get(IntPtr ptr, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus bgsegm_Ptr_BackgroundSubtractorGSOC_delete(IntPtr obj);

    #endregion

    #region BackgroundSubtractorLSBP

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus bgsegm_createBackgroundSubtractorLSBP(
        int mc, int nSamples, int lsbpRadius, float tLower, float tUpper, float tInc, float tDec,
        float rScale, float rIncdec, float noiseRemovalThresholdFacBG, float noiseRemovalThresholdFacFG,
        int lsbpThreshold, int minCount,
        out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus bgsegm_Ptr_BackgroundSubtractorLSBP_get(IntPtr ptr, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus bgsegm_Ptr_BackgroundSubtractorLSBP_delete(IntPtr obj);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus bgsegm_BackgroundSubtractorLSBPDesc_calcLocalSVDValues(
        in OutputArrayProxy localSVDValues, IntPtr frame);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus bgsegm_BackgroundSubtractorLSBPDesc_computeFromLocalSVDValues(
        in OutputArrayProxy desc, IntPtr localSVDValues, [In] Point[] lsbpSamplePoints);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus bgsegm_BackgroundSubtractorLSBPDesc_compute(
        in OutputArrayProxy desc, IntPtr frame, [In] Point[] lsbpSamplePoints);

    #endregion

    #region SyntheticSequenceGenerator

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus bgsegm_SyntheticSequenceGenerator_new(
        in InputArrayProxy background, in InputArrayProxy @object,
        double amplitude, double wavelength, double wavespeed, double objspeed,
        out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus bgsegm_SyntheticSequenceGenerator_delete(IntPtr obj);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus bgsegm_SyntheticSequenceGenerator_getNextFrame(
        OpenCvSafeHandle obj, in OutputArrayProxy frame, in OutputArrayProxy gtMask);

    #endregion
}
